Fix primary menu z-index issue on home

--- a/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -4,6 +4,7 @@ $main-menu-medium: $medium;
 /* Nav */
 .main-nav {
   display: none;
+  z-index: 200;
 
   @include medium {
     display: block;
